deployment/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devjeans-front
  namespace: devjeans
  labels:
    tier: front
    app: devjeans
spec:
  replicas: 4
  selector:
    matchLabels:
      app: devjeans
      tier: front
  template:
    metadata:
      labels:
        app: devjeans
        tier: front
    spec:
      containers:
        - name: devjeans-front
          image: patnmat/devjeans-front:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: devjeans-front-service
  namespace: devjeans
  labels:
    app: devjeans
spec:
  type: ClusterIP
  selector:
    app: devjeans
    tier: front
  ports:
    - name: http
      port: 80
      targetPort: 80
