deployment/frontend/front_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fornt-ing
spec:
  ingressClassName: nginx
  rules:
    - host: stg-devjeans.dev-hee.com
      http:
        paths:
          - backend:
              service:
                name: devjeans-front
                port:
                  number: 80
            path: /
            pathType: Prefix
