deployment/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front
spec:
  ingressClassName: nginx
  rules:
    - host: stg-devjeans.dev-hee.com
      http:
        paths:
          - backend:
              service:
                name: devjeans-front-service 
                port:
                  number: 80
            path: /
            pathType: Prefix
